--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1"
   }
