--- a/api/package.json
+++ b/api/package.json
@@ -3,5 +3,16 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
